--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,6 @@
-/* * {
+* {
     outline: 1px dotted red;
-} */
+}
 
 /* Header */
 /* -------------------------------------- */
@@ -68,4 +68,10 @@
 
 .btn {
     text-align: center;
+}
+
+/* Footer */
+/* ---------------------------------------------- */
+footer{
+    padding-bottom: 20px;
 }
