Added cart items to header.js

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,6 @@
-* {
+/* * {
     outline: 1px dotted red;
-}
+} */
 
 /* Header */
 /* -------------------------------------- */
@@ -39,6 +39,11 @@
     
 }
 
+/* Cart */
+/* ---------------------------------------------- */
+.top-icons{
+    margin-left: 76%;
+}
 
 /* Main Content */
 /* ---------------------------------------------- */
@@ -75,3 +80,4 @@
 footer{
     padding-bottom: 20px;
 }
+
